[gd_scene load_steps=4 format=2]

[ext_resource path="res://characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://characters/shapes/hex.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.75, 28.5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="Icon" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="InteractAreaDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractAreaDetector"]
shape = SubResource( 1 )

[connection signal="area_entered" from="InteractAreaDetector" to="." method="_on_InteractAreaDetector_area_entered"]
[connection signal="area_exited" from="InteractAreaDetector" to="." method="_on_InteractAreaDetector_area_exited"]
